<smallScreenMenuScript> premesten u poseban fajl

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@ href= Specifies the location of the linked document-->
                     <li><a href="">HOME</a></li>
                     <li><a href="">ABOUT</a></li>
                     <li><a href="">LAKES</a></li>
-                    <li><a href="">FISHING GEAR</a></li>
+                    <li><a href="">FISHING LICENCE</a></li>
                     <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
@@ -57,14 +57,8 @@ href= Specifies the location of the linked document-->
 
     </section>
     <!--create javaScrept function for showing and hiding Menu in small screen mode-->
-    <script>
-      var navLinks=document.getElementById("navLinks");
-      function showMenu(){
-        navLinks.style.right="0";
-      }
-      function hideMenu(){
-        navLinks.style.right="-200px";
-      }
+    <script src="smallScreenMenuScript.js">
+      
     </script>
     </body>
 </html>
