About Page is Finished

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@ href= Specifies the location of the linked document-->
        <!------- Nature Reserve Section ----------->
        <section class="natureReserve"> 
         <h1>Nature Reserve</h1>
-        <p> <p>Fisherman Stories invites you to explore some of the best lakes in Sweden</p></p>
+        <p>Fisherman Stories invites you to explore some of the best lakes in Sweden</p>
         <div class="row">
             <div class="natureReserv-col">
                 <img src="images/mjorn.jpg" >
@@ -105,6 +105,7 @@ href= Specifies the location of the linked document-->
             </div>
             <div class="natureReserv-col">
                 <img src="images/ralangen.jpg" >
+                
                 <div class="layer">
                     <h3>Ralången</h3>
                 </div>
@@ -113,6 +114,56 @@ href= Specifies the location of the linked document-->
             
         </div>
     </section>
+
+    <!-- Fisherman Stories Records -->
+    <section class="fishermanStoriesRecords">
+        <h1>Fisherman Stories Records</h1>
+        <p>Fisherman Stories invites you to explore some of the best lakes in Sweden</p>
+       <div class="row">
+          <div class="fishermanStoriesRecords-col">
+             <img src="images/pike.jpg">
+             <h3>Northern Pike</h3>
+             <p> Northern Pike is among largest predators in Swedish lakes with averige size of 55-60cm.Swedish record is 150cm and 25kg </p>
+              <div class="layerFishImg">
+                <h3>Northern Pike<br>110cm and 11kg</h3>
+              </div>
+          </div>
+
+          <div class="fishermanStoriesRecords-col">
+            <img src="images/zander.jpg" >
+            <h3>Zander</h3>
+             <p> Zander is a popular game fish and is common in most Swedish lakes with averige size of 45cm.Swedish record is 130cm and 12kg </p>
+            <div class="layerFishImg">
+                <h3>Zander<br>80cm and 4,2kg</h3>
+            </div>
+          </div>
+          <div class="fishermanStoriesRecords-col">
+            <img src="images/prch.jpg" >
+            <h3>Perch</h3>
+             <p> Perch is definitely the most popular game fish in Sweden, averige size iz 35cm but Swedish record is 61,5cm and 3,150kg </p>
+            <div class="layerFishImg">
+                <h3>Perch<br>42cm and 2,2kg</h3>
+            </div>
+       </div>
+    </section>
+     <!-- Call to Action Section create Direction to CONTACT part -->
+     <section class="cta">
+        <h1>Discover Where Virgin Nature Meets Bold Fishes</h1>
+        <a href="" class="hero-btn2">CONTACT US</a>
+
+    </section>
+
+    <!-- Footer Section -->
+    <footer class="footer">
+        <h4>About Us</h4>
+        <p>You Can Find Us On All Socila Media<br>We Are Present Everywhere </p>
+        <div class="icons"> 
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-instagram"></i>
+        </div>
+        <p>Made with<i class="fa fa-heart-o"></i>by Bojan Mirkovic </p>
+    </footer>
 
     <!--create javaScrept function for showing and hiding Menu in small screen mode-->
     <script src="smallScreenMenuScript.js"></script>
